# zotero-rag-py

./: README.md  pyproject.toml
src/rag/: core.py
src/zotero_qa/: chain.py  input.py
src/zotero_qa/utils/: library.py
