[project]
name = "zotero-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "colorama>=0.4.6",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "ruff>=0.6.9",
]

[tool.ruff]
select = ["E", "W", "F", "S", "B", "I001", "RUF002", "RUF100", "RUF013", "RUF010", "RUF200"]

exclude = [
    ".DS_Store",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache"
]

line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.pycodestyle]
max-doc-length = 120
